# lab-docsum

./: .coverage  .flake8  .gitignore  AGENTS.md  README.md  chat.py  coverage.xml  endpoint.py  gradio_server.py  pyproject.toml  requirements.txt  test_utf16.txt
.github/workflows/: doctest.yml  integration-tests.yml  pypi.yml
test_projects/chisatokamakura.github.io/: README.md  icedance.html  index.html  men.html  pairs.html  style.css  women.html
tests/: test_doctests.py
tools/: calculate.py  cat.py  doctests.py  grep.py  ls.py  pip_install.py  rm.py  write_file.py  write_files.py
